syntax = "proto3";
package internal;
import "google/protobuf/timestamp.proto";

message FactoidResponse {
  google.protobuf.Timestamp DateCreated = 1;
  google.protobuf.Timestamp DateEdited = 2;
  string Response = 3;
}

message Factoid {
  google.protobuf.Timestamp DateCreated = 1;
  google.protobuf.Timestamp DateEdited = 2;
  bool Protected = 3;
  repeated FactoidResponse Responses = 4;
}
